# surveillance-system

./: .gitignore  LICENSE  Makefile  README.md  coverage.html  go.mod  go.sum
cmd/server/: main.go
internal/api/: handlers.go
internal/core/: alert_manager.go  alert_manager_test.go  config.go  errors.go  event_processor.go  event_processor_test.go  types.go
internal/vision/: client.go  grpc_client.go  mock.go  mock_test.go
internal/vision/proto/: vision.pb.go  vision_grpc.pb.go
internal/websocket/: hub.go
scripts/: generate-proto.sh
vision-service/: CMakeLists.txt  Makefile  README.md
vision-service/proto/: vision.proto
vision-service/src/: camera_manager.cpp  camera_manager.h  frame_processor.cpp  frame_processor.h  main.cpp  service_metrics.cpp  service_metrics.h  vision_service.cpp  vision_service.h
vision-service/tests/: test_vision_service.cpp
web/: index.html
